[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "artifacts-mmo"
version = "0.1.0"
description = "Async Python wrapper for the Artifacts MMO API"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "aiohttp>=3.9,<4",
    "pydantic>=2.0,<3",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "aioresponses",
]

[tool.hatch.build.targets.wheel]
packages = ["src/artifacts"]
