[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "artifacts-mmo"
version = "0.2.2"
description = "Python SDK for the Artifacts MMO API -- sync & async, game-oriented"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["artifacts", "mmo", "api", "sdk", "wrapper", "async", "sync", "game", "bot"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: AsyncIO",
]
dependencies = [
    "pydantic>=1.10,<3",
    "aiohttp>=3.9,<4",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "aioresponses",
    "furo",
]

[tool.hatch.build.targets.wheel]
packages = ["src/artifacts"]
